# ece-3574-project-2

./: CMakeCache.txt  CMakeLists.txt  canvas.cpp  canvas.h  canvasTest.cpp  circle.cpp  circle.h  circleTest.cpp  cordinate.h  drawing.cpp  drawing.h  drawingTest.cpp  line.cpp  line.h  lineTest.cpp  main.cpp  menu.cpp  menu.h  menuTest.cpp  message.cpp  message.h  messageTest.cpp  moc_canvas.cpp  moc_circle.cpp  moc_drawing.cpp  moc_line.cpp  moc_qtdraw.cpp  object.cpp  qtdraw.cpp  qtdraw.h  qtdrawTest.cpp  qtdraw_automoc.cpp  window.cpp  window.h
